@@ -85,7 +85,7 @@ public class FibonacciSystem implements NumeralSystemInterface {
     private String formNumberBasedOnPowers(List<Integer> listOfPowers) {
         StringBuilder b = new StringBuilder();
 
-        for (int i = listOfPowers.getFirst(); i >= 0; i--) {
+        for (int i = listOfPowers.get(0); i >= 0; i--) {
             // So we have zero index
 
             if (listOfPowers.contains(i)) {
